cargo-features = ["edition2024"]

[package]
name = "krust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "krust"
path = "src/krust.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
cortex-m-semihosting = "0.3.3"
cortex-m = "0.7"           # Cortex-M specific functionality

